Add linear regression using Gradient Descent

--- a/Tutorial4.ipynb
+++ b/Tutorial4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear regression"
+    "## Linear regression using NN"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now make the plot comparing the scatter plot using the training data and the predicted value from the constructed neural network."
+    "Now let's make the plot comparing the scatter plot using the training data and the predicted value from the constructed neural network."
    ]
   },
   {
@@ -111,6 +111,65 @@
     "plt.scatter(x_train,y_train,label='training data',marker='o',color='r',s=30)\n",
     "plt.plot(x_train,y_pred,label='predict',linewidth=3)\n",
     "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear regression using Gradient Descent\n",
+    "Let's train a linear regression model with the gradient descent algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean squared loss at iteration    0 is 21.3448\n",
+      "mean squared loss at iteration  100 is 0.1095\n",
+      "mean squared loss at iteration  200 is 0.0411\n",
+      "mean squared loss at iteration  300 is 0.0169\n",
+      "mean squared loss at iteration  400 is 0.0071\n",
+      "mean squared loss at iteration  500 is 0.0029\n",
+      "mean squared loss at iteration  600 is 0.0012\n",
+      "mean squared loss at iteration  700 is 0.0005\n",
+      "mean squared loss at iteration  800 is 0.0002\n",
+      "mean squared loss at iteration  900 is 0.0001\n",
+      "mean squared loss at iteration 1000 is 0.0000\n",
+      "<tf.Variable 'Variable:0' shape=(5, 1) dtype=float32, numpy=\n",
+      "array([[0.00684703],\n",
+      "       [1.0174296 ],\n",
+      "       [2.0098288 ],\n",
+      "       [2.9893858 ],\n",
+      "       [3.9827065 ]], dtype=float32)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ground truth\n",
+    "true_weights = tf.constant(list(range(5)), dtype=tf.float32)[:, tf.newaxis]\n",
+    "\n",
+    "# some random training data\n",
+    "x = tf.constant(tf.random.uniform((32, 5)), dtype=tf.float32)\n",
+    "y = tf.constant(x @ true_weights, dtype=tf.float32)\n",
+    "\n",
+    "# model parameters\n",
+    "weights = tf.Variable(tf.random.uniform((5, 1)), dtype=tf.float32)\n",
+    "for iteration in range(1001):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        y_hat = tf.linalg.matmul(x, weights)\n",
+    "        loss = tf.reduce_mean(tf.square(y - y_hat))\n",
+    "    if not (iteration % 100):\n",
+    "        print('mean squared loss at iteration {:4d} is {:5.4f}'.format(iteration, loss))\n",
+    "    gradients = tape.gradient(loss, weights)\n",
+    "    weights.assign_add(-0.05 * gradients)\n",
+    "\n",
+    "print(weights)"
    ]
   },
   {
