--- a/Tutorial6.ipynb
+++ b/Tutorial6.ipynb
@@ -429,13 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "@tf.function(autograph=False)\n",
-    "def square(x):\n",
-    "    return x * x\n",
     "def square(x):\n",
     "    return x * x\n",
     "\n",
@@ -444,10 +442,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@tf.function(autograph=False)\n",
+      "def square(x):\n",
+      "    return x * x\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inspect.getsource(square))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear Regression Revisited\n",
+    "\n",
+    "**Normal mode**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean squared loss at iteration    0 is 9.5217\n",
+      "mean squared loss at iteration  200 is 0.0708\n",
+      "mean squared loss at iteration  400 is 0.0082\n",
+      "mean squared loss at iteration  600 is 0.0011\n",
+      "mean squared loss at iteration  800 is 0.0002\n",
+      "mean squared loss at iteration 1000 is 0.0000\n",
+      "<tf.Variable 'Variable:0' shape=(5, 1) dtype=float32, numpy=\n",
+      "array([[0.01446281],\n",
+      "       [1.006089  ],\n",
+      "       [1.9856374 ],\n",
+      "       [2.9991345 ],\n",
+      "       [3.992287  ]], dtype=float32)>\n",
+      "time took: 0.6380012035369873 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ground truth\n",
+    "true_weights = tf.constant(list(range(5)), dtype=tf.float32)[:, tf.newaxis]\n",
+    "\n",
+    "# some random training data\n",
+    "x = tf.constant(tf.random.uniform((32, 5)), dtype=tf.float32)\n",
+    "y = tf.constant(x @ true_weights, dtype=tf.float32)\n",
+    "\n",
+    "t0 = time.time()\n",
+    "\n",
+    "weights = tf.Variable(tf.random.uniform((5, 1)), dtype=tf.float32)\n",
+    "for iteration in range(1001):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        y_hat = tf.linalg.matmul(x, weights)\n",
+    "        loss = tf.reduce_mean(tf.square(y - y_hat))\n",
+    "    if not (iteration % 200):\n",
+    "        print('mean squared loss at iteration {:4d} is {:5.4f}'.format(iteration, loss))\n",
+    "    gradients = tape.gradient(loss, weights)\n",
+    "    weights.assign_add(-0.05 * gradients)\n",
+    "\n",
+    "pprint(weights)\n",
+    "print('time took: {} seconds'.format(time.time() - t0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**In graph mode**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean squared loss at iteration    0 is 10.4993\n",
+      "mean squared loss at iteration  200 is 0.0646\n",
+      "mean squared loss at iteration  400 is 0.0079\n",
+      "mean squared loss at iteration  600 is 0.0011\n",
+      "mean squared loss at iteration  800 is 0.0002\n",
+      "mean squared loss at iteration 1000 is 0.0000\n",
+      "<tf.Variable 'Variable:0' shape=(5, 1) dtype=float32, numpy=\n",
+      "array([[0.01437845],\n",
+      "       [1.0059469 ],\n",
+      "       [1.9856571 ],\n",
+      "       [2.999293  ],\n",
+      "       [3.992368  ]], dtype=float32)>\n",
+      "time took: 0.27387380599975586 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time.time()\n",
+    "weights = tf.Variable(tf.random.uniform((5, 1)), dtype=tf.float32)\n",
+    "@tf.function\n",
+    "def train_step():\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        y_hat = tf.linalg.matmul(x, weights)\n",
+    "        loss = tf.reduce_mean(tf.square(y - y_hat))\n",
+    "    gradients = tape.gradient(loss, weights)\n",
+    "    weights.assign_add(-0.05 * gradients)\n",
+    "    return loss\n",
+    "\n",
+    "for iteration in range(1001):\n",
+    "    loss = train_step()\n",
+    "    if not (iteration % 200):\n",
+    "        print('mean squared loss at iteration {:4d} is {:5.4f}'.format(iteration, loss))\n",
+    "        \n",
+    "pprint(weights)\n",
+    "print('time took: {} seconds'.format(time.time() - t0))"
+   ]
   }
  ],
  "metadata": {
